implement constructor function and exports

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
   <body>
     <main>
       <div id="hero">
-        <!-- CHALLENGE -->
-        <!-- 1. Render the Wizard card from index.js -->
+        <!-- Wizard -->
       </div>
       <div id="monster">
-        <!-- CHALLENGE -->
-        <!-- 2. Render the Orc card from index.js -->
+        <!-- Orc -->
       </div>
     </main>
     <section id="actions">
